--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.3
   http: ^1.4.0
   json_annotation: ^4.9.0
+  infinite_scroll_pagination: ^5.1.0
 
 dev_dependencies:
   flutter_test:
