--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   niku: ^2.4.3
   shared_preferences: ^2.5.3
-  http: ^1.4.0
   json_annotation: ^4.9.0
   infinite_scroll_pagination: ^5.1.0
+  rxdart: ^0.28.0
+  rhttp: ^0.13.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
