--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   infinite_scroll_pagination: ^5.1.0
   rxdart: ^0.28.0
   rhttp: ^0.13.0
+  animated_read_more_text: ^0.0.6
 
 dev_dependencies:
   flutter_test:
