--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   rxdart: ^0.28.0
   rhttp: ^0.13.0
   animated_read_more_text: ^0.0.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
