--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   rhttp: ^0.13.0
   animated_read_more_text: ^0.0.6
   intl: ^0.20.2
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
