--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   intl: ^0.20.2
   photo_view: ^0.15.0
   maps_launcher: ^3.0.0+1
+  url_launcher: ^6.3.2
+  mailto: ^2.0.0
 
 dev_dependencies:
   flutter_test:
