--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   maps_launcher: ^3.0.0+1
   url_launcher: ^6.3.2
   mailto: ^2.0.0
+  syncfusion_flutter_calendar: ^30.2.6
+  workmanager: ^0.9.0+2
+  flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
   flutter_test:
