--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mailto: ^2.0.0
   syncfusion_flutter_calendar: ^30.2.6
   workmanager: ^0.9.0+2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
