--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_calendar: ^30.2.6
   workmanager: ^0.9.0+2
   flutter_rating_bar: ^4.0.1
+  multi_dropdown: ^3.0.1
 
 dev_dependencies:
   flutter_test:
