--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   workmanager: ^0.9.0+2
   flutter_rating_bar: ^4.0.1
   multi_dropdown: ^3.0.1
+  flutter_slidable: ^4.0.1
 
 dev_dependencies:
   flutter_test:
