--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   multi_dropdown: ^3.0.1
   flutter_slidable: ^4.0.1
   firebase_messaging: ^16.0.2
+  firebase_core: ^4.1.1
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   flutter_test:
