--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_messaging: ^16.0.2
   firebase_core: ^4.1.1
   flutter_local_notifications: ^19.4.2
+  hl_image_picker: ^1.2.16
 
 dev_dependencies:
   flutter_test:
