--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+anyhow = "1.0.100"
 flutter_rust_bridge = "=2.11.1"
+image = "0.25.8"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
