--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,6 @@ app.*.map.json
 /android/app/google-services.json
 
 # Custom
+firebase.json
 /lib/firebase_options.dart
 /ios/Runner/GoogleService-Info.plist
