--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
   build:      
     name: Build & Release  
     runs-on: macos-latest
+    environment: BuildEnv
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -47,10 +48,8 @@ jobs:
         run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
       - name: Decode Keystore
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/keystore.jks
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
       
       - name: Create key.properties
         run: |
@@ -60,17 +59,13 @@ jobs:
           echo "storeFile=keystore.jks" >> android/key.properties
 
       - name: Decode Firebase Configuration Files
-        env:
-          GOOGLE_SERVICE_JSON_BASE64: ${{ secrets.GOOGLE_SERVICE_JSON }}
-          FIREBASE_OPTIONS_BASE64: ${{ secrets.FIREBASE_OPTIONS }}
-          GOOGLE_SERVICE_PLIST_BASE64: ${{ secrets.GOOGLE_SERVICE_PLIST }}
         run: |
           echo "Decoding google-services.json..."
-          echo "$GOOGLE_SERVICE_JSON_BASE64" | base64 --decode > android/app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICE_JSON }}" | base64 --decode > android/app/google-services.json
           echo "Decoding firebase_options.dart..."
-          echo "$FIREBASE_OPTIONS_BASE64" | base64 --decode > lib/firebase_options.dart
+          echo "${{ secrets.FIREBASE_OPTIONS }}" | base64 --decode > lib/firebase_options.dart
           echo "Decoding GoogleService-Info.plist..."
-          echo "$GOOGLE_SERVICE_PLIST_BASE64" | base64 --decode > ios/Runner/GoogleService-Info.plist
+          echo "${{ secrets.GOOGLE_SERVICE_PLIST }}" | base64 --decode > ios/Runner/GoogleService-Info.plist
           echo "Verifying decoded files..."
           ls -lh android/app/google-services.json
           ls -lh lib/firebase_options.dart
