--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,11 +53,33 @@ jobs:
         # Running "flutter doctor" will download Flutter's dependencies
         run: flutter doctor
       
-      - name: Install Dependencies
-        run: flutter pub get
+      - name: Setup Android SDK
+        run: |
+          # Set Android SDK path
+          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          
+          # Create SDK directory
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          
+          # Download Android command line tools
+          cd $HOME/android-sdk/cmdline-tools
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          unzip -q commandlinetools-linux-11076708_latest.zip
+          mv cmdline-tools latest
+          rm commandlinetools-linux-11076708_latest.zip
+          
+          # Add to PATH
+          echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
 
       - name: Accept Android Licenses
-        run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
+        run: |
+          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+      
+      - name: Install Dependencies
+        run: flutter pub get
 
       - name: Decode Keystore
         run: |
