--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build-android:
     name: Build Android (APK & AAB)
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-latest
     environment: BuildEnv
     steps:
       - name: Checkout repository
@@ -36,22 +36,13 @@ jobs:
           targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android
 
       - name: Setup Flutter SDK
-        run: |
-          # Download Flutter SDK for Linux x64 (works on ARM64 via emulation)
-          cd $HOME
-          wget -q https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.27.3-stable.tar.xz
-          tar xf flutter_linux_3.27.3-stable.tar.xz
-          rm flutter_linux_3.27.3-stable.tar.xz
-          
-          # Add Flutter to PATH
-          echo "$HOME/flutter/bin" >> $GITHUB_PATH
-          echo "$HOME/flutter/bin/cache/dart-sdk/bin" >> $GITHUB_PATH
-          
-          # Precache Android artifacts
-          $HOME/flutter/bin/flutter precache --android --no-ios --no-web
+        uses: flutter-actions/setup-flutter@v4
+        with:
+          channel: stable
+          version: latest
 
       - name: Accept Android Licenses
-        run: yes | flutter doctor --android-licenses || true
+        run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
       
       - name: Install Dependencies
         run: flutter pub get
