Change upload release runner

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -179,7 +179,7 @@ jobs:
   release:
     name: Create GitHub Release
     needs: [build-android, build-ios]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: Download Android Artifacts
         uses: actions/download-artifact@v5
