--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -218,12 +218,21 @@ jobs:
         run: |
           echo "Preparing release files..."
           
+          # Get repository name and version
+          REPO_NAME="${{ github.repository }}"
+          REPO_NAME=$(echo "$REPO_NAME" | cut -d'/' -f2)  # Extract repo name from owner/repo
+          VERSION="${{ steps.version.outputs.version }}"
+          
+          echo "Repository name: $REPO_NAME"
+          echo "Version: $VERSION"
+          
           # Find and copy APK file
           APK_FILE=$(find android-builds -name "*.apk" -type f | head -1)
           if [ -n "$APK_FILE" ]; then
             echo "Found APK: $APK_FILE"
-            cp "$APK_FILE" ./app-release.apk
-            echo "✅ APK file prepared"
+            APK_NAME="${REPO_NAME}-${VERSION}.apk"
+            cp "$APK_FILE" "./$APK_NAME"
+            echo "✅ APK file prepared as: $APK_NAME"
           else
             echo "❌ No APK file found in android-builds"
             exit 1
@@ -233,8 +242,9 @@ jobs:
           AAB_FILE=$(find android-builds -name "*.aab" -type f | head -1)
           if [ -n "$AAB_FILE" ]; then
             echo "Found AAB: $AAB_FILE"
-            cp "$AAB_FILE" ./app-release.aab
-            echo "✅ AAB file prepared"
+            AAB_NAME="${REPO_NAME}-${VERSION}.aab"
+            cp "$AAB_FILE" "./$AAB_NAME"
+            echo "✅ AAB file prepared as: $AAB_NAME"
           else
             echo "❌ No AAB file found in android-builds"
             exit 1
@@ -244,15 +254,16 @@ jobs:
           IPA_FILE=$(find ios-builds -name "*.ipa" -type f | head -1)
           if [ -n "$IPA_FILE" ]; then
             echo "Found IPA: $IPA_FILE"
-            cp "$IPA_FILE" ./Runner.ipa
-            echo "✅ IPA file prepared"
+            IPA_NAME="${REPO_NAME}-${VERSION}.ipa"
+            cp "$IPA_FILE" "./$IPA_NAME"
+            echo "✅ IPA file prepared as: $IPA_NAME"
           else
             echo "❌ No IPA file found in ios-builds"
             exit 1
           fi
           
           echo "Release files prepared:"
-          ls -lh app-release.apk app-release.aab Runner.ipa
+          ls -lh "${REPO_NAME}-${VERSION}".*
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -262,7 +273,7 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            app-release.apk
-            app-release.aab
-            Runner.ipa
+            ${{ github.event.repository.name }}-${{ steps.version.outputs.version }}.apk
+            ${{ github.event.repository.name }}-${{ steps.version.outputs.version }}.aab
+            ${{ github.event.repository.name }}-${{ steps.version.outputs.version }}.ipa
           token: ${{ secrets.GITHUB_TOKEN }}
