--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,34 @@ jobs:
           java-version: '21'
       
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v3.1.0
+        uses: android-actions/setup-android@v3
+        with:
+          packages: 'platform-tools'
+
+      - name: Install ADB
+        run: |
+          curl --compressed --location --output tools.zip https://github.com/lzhiyong/android-sdk-tools/releases/download/34.0.3/android-sdk-tools-static-aarch64.zip
+          unzip -d tools -n -q tools.zip
+          rm -f tools.zip
+          cp tools/platform-tools/adb /path/to/android-sdk/platform-tools/adb
+          rm -fr tools
+
+      - name: Install Emulator
+        run: |
+            curl --compressed --location --output emulator.zip $(curl --location --silent https://ci.android.com/builds/submitted/11162281/emulator-linux_aarch64/latest/sdk-repo-linux_aarch64-emulator-11162281.zip | grep -o 'https://storage[^"]*' | sed 's/\\u0026/\&/g')
+            unzip -d /path/to/android-sdk -n -q emulator.zip
+            rm -f emulator.zip
+            cp /path/to/android-sdk/platform-tools/package.xml /path/to/android-sdk/emulator/package.xml
+            sed -i \
+              -e 's|path="[a-zA-Z-]*"|path="emulator"|g' \
+              -e 's|<display-name>Android .*<\/display-name>|<display-name>Android Emulator<\/display-name>|g' \
+              /path/to/android-sdk/emulator/package.xml
+            echo 'Vulkan = off\nGLDirectMem = on' >> ~/.android/advancedFeatures.ini
+        
+      - name: Install SDK Tools
+        run: |
+            sdkmanager 'platforms;android-34' 'system-images;android-34;google_apis;arm64-v8a' 'tools'
+            bash -c 'yes || true' | sdkmanager --licenses
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -44,30 +71,11 @@ jobs:
           channel: master
           flutter-version: latest
 
-      - name: Verify Flutter Setup
+      - name: Checkout flutter
         run: flutter doctor
       
       - name: Accept Android Licenses
         run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
-      
-      - name: Install Required Android Packages
-        run: |
-          echo "Installing required Android packages..."
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "platforms;android-34" "build-tools;34.0.0" "ndk;29.0.13846066" || true
-          echo "Android packages installation completed"
-      
-      - name: Verify Android SDK Setup
-        run: |
-          echo "Android SDK Home: $ANDROID_HOME"
-          echo "Android SDK Contents:"
-          ls -la $ANDROID_HOME/
-          echo "Command line tools:"
-          ls -la $ANDROID_HOME/cmdline-tools/
-          echo "SDK Manager version:"
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --version || echo "SDK Manager not found"
-      
-      - name: Clean Flutter Project
-        run: flutter clean
       
       - name: Install Dependencies
         run: flutter pub get
