--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,30 +34,14 @@ jobs:
         with:
           packages: 'platform-tools'
 
-      - name: Install ADB
+      - name: Install Android SDK packages
         run: |
-          curl --compressed --location --output tools.zip https://github.com/lzhiyong/android-sdk-tools/releases/download/34.0.3/android-sdk-tools-static-aarch64.zip
-          unzip -d tools -n -q tools.zip
-          rm -f tools.zip
-          cp tools/platform-tools/adb $ANDROID_HOME/platform-tools/adb
-          rm -fr tools
-
-      - name: Install Emulator
-        run: |
-            curl --compressed --location --output emulator.zip $(curl --location --silent https://ci.android.com/builds/submitted/11162281/emulator-linux_aarch64/latest/sdk-repo-linux_aarch64-emulator-11162281.zip | grep -o 'https://storage[^"]*' | sed 's/\\u0026/\&/g')
-            unzip -d $ANDROID_HOME -n -q emulator.zip
-            rm -f emulator.zip
-            cp $ANDROID_HOME/platform-tools/package.xml $ANDROID_HOME/emulator/package.xml
-            sed -i \
-              -e 's|path="[a-zA-Z-]*"|path="emulator"|g' \
-              -e 's|<display-name>Android .*<\/display-name>|<display-name>Android Emulator<\/display-name>|g' \
-              $ANDROID_HOME/emulator/package.xml
-            echo 'Vulkan = off\nGLDirectMem = on' >> ~/.android/advancedFeatures.ini
-        
-      - name: Install SDK Tools
-        run: |
-            sdkmanager 'platforms;android-34' 'system-images;android-34;google_apis;arm64-v8a' 'tools'
-            bash -c 'yes || true' | sdkmanager --licenses
+          echo "Installing Android SDK packages..."
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install \
+            "platform-tools" \
+            "build-tools;34.0.0" || true
+          echo "Android SDK packages installation completed"
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -293,7 +277,7 @@ jobs:
           fi
           
           echo "Release files prepared:"
-          ls -lh "${REPO_NAME}-${VERSION}".*
+          ls -lh "${REPO_NAME}-${VERSION}.*"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
