Try build on arm64 again

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,13 +41,18 @@ jobs:
           toolchain: stable
           targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: master
-          flutter-version: latest
+      - name: Install dependencies from Apt
+        run: |
+            sudo apt-get update -y && sudo apt-get upgrade -y;
 
-      - name: Checkout flutter
+            sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+  
+      - name: Clone Flutter
+        run: |
+            git clone --depth 1 --branch 3.27.3 https://github.com/flutter/flutter.git $RUNNER_TEMP/flutter
+            echo "$RUNNER_TEMP/flutter/bin" >> $GITHUB_PATH
+
+      - name: Install and Check Flutter
         run: flutter doctor
       
       - name: Install Dependencies
