--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install dependencies from Apt
         run: |
-            sudo apt-get update -y && sudo apt-get upgrade -y;
+            sudo apt-get update -y
 
             sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
   
