--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,11 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: master
+      
+      - name: Force Pre-cache Android Artifacts
+        run: |
+          flutter precache --android
+          flutter clean
 
       - name: Install and Check Flutter
         run: flutter doctor
