--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build-android:
     name: Build Android (APK & AAB)
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-latest
     environment: BuildEnv
     steps:
       - name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
           java-version: '21'
 
       - name: Setup Android SDK
-        uses: amyu/setup-android@v5
+        uses: android-actions/setup-android@v5
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -42,15 +42,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: 3.24.5
-          architecture: arm64
-      
-      - name: Force Pre-cache Android Artifacts
-        run: |
-          flutter precache --android
-          flutter clean
 
-      - name: Install and Check Flutter
+      - name: Check Flutter
         run: flutter doctor
       
       - name: Install Dependencies
