--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,17 +102,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: MiSans
+      fonts:
+          - asset: fonts/MisansTC-Regular.ttf
+            weight: 400
+          - asset: fonts/MisansTC-Medium.ttf
+            weight: 500
+          - asset: fonts/MisansTC-Demibold.ttf
+            weight: 600
+          - asset: fonts/MisansTC-Bold.ttf
+            weight: 700
+        # - asset: fonts/MisansTC VF.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
