--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,8 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
+ezsockets = "0.7.0"
 flutter_rust_bridge = "=2.11.1"
 image = "0.25.8"
 
