--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
     path: rust_builder
   flutter_rust_bridge: 2.11.1
   image_cropper: ^11.0.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
