Updated websocket client to self-coded

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,13 +8,13 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
-# async-trait = "0.1.89"
-# ezsockets = { version = "0.7.0", features = ["native-tls"] }
-# openssl = { version = "0.10", features = ["vendored"] }
+async-trait = "0.1.89"
+ezsockets = { version = "0.7.0", features = ["native-tls"] }
+openssl = { version = "0.10", features = ["vendored"] }
 flutter_rust_bridge = "=2.11.1"
 image = "0.25.8"
-# log = "0.4.28"
-# parking_lot = "0.12.5"
+log = "0.4.28"
+parking_lot = "0.12.5"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
