--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   multi_dropdown: ^3.0.1
   flutter_slidable: ^4.0.1
+  scrollable_positioned_list: ^0.3.8
   firebase_messaging: ^16.0.2
   firebase_core: ^4.1.1
   flutter_local_notifications: ^19.4.2
