--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_rust_bridge: 2.11.1
   image_cropper: ^11.0.0
   badges: ^3.1.2
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
