--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -87,8 +87,8 @@ jobs:
           ls -lh android/app/google-services.json
           ls -lh lib/firebase_options.dart
 
-      - name: Build APK
-        run: flutter build apk --release --target-platform android-arm,android-arm64 --build-name="${{ github.event.inputs.version || github.ref_name }}" --build-number="${{ github.run_number }}"
+      - name: Build APK (Split per ABI)
+        run: flutter build apk --release --split-per-abi --target-platform android-arm,android-arm64 --build-name="${{ github.event.inputs.version || github.ref_name }}" --build-number="${{ github.run_number }}"
 
       - name: Build App Bundle
         run: flutter build appbundle --release --target-platform android-arm,android-arm64 --build-name="${{ github.event.inputs.version || github.ref_name }}" --build-number="${{ github.run_number }}"
