--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_cropper: ^11.0.0
   badges: ^3.1.2
   logger: ^2.6.2
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
