--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,8 +46,9 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      # - name: Setup Android SDK
-      #   uses: android-actions/setup-android@v3
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Update Android NDK Environment Variables
         run: |
           echo "ANDROID_NDK=$ANDROID_NDK_LATEST_HOME" >> $GITHUB_ENV
